<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity_Login">

    <ImageView
        android:id="@+id/linear_loginBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/background_login_guanzonapp"
        android:scaleType="centerCrop"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_login_dim"
        android:orientation="vertical"
        android:weightSum="2"
        android:paddingHorizontal="20dp"
        android:paddingBottom="20dp"
        android:paddingTop="70dp">

        <LinearLayout
            android:layout_weight="1.5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:scaleType="centerInside"
                android:src="@drawable/profile_guanzon_logo"
                android:tint="@color/colorAccentLight"/>

        </LinearLayout>

        <LinearLayout
            android:layout_weight=".5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="2">

            <LinearLayout
                android:layout_weight=".9"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center_horizontal|bottom">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_loginEmail"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/login_email"
                        style="@style/textBoxAppearance"
                        android:layout_marginHorizontal="5dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tie_loginEmail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:maxLines="1"
                            android:inputType="textEmailAddress">

                        </com.google.android.material.textfield.TextInputEditText>
                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_loginPassword"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/login_pswrd"
                        style="@style/textBoxAppearance"
                        android:layout_marginHorizontal="5dp"
                        app:passwordToggleEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tie_loginPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:maxLines="1"
                            android:inputType="textPassword">

                        </com.google.android.material.textfield.TextInputEditText>
                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linear_loginMobileNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_loginMobileNo"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/login_moble"
                        style="@style/textBoxAppearance"
                        android:layout_marginHorizontal="5dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tie_loginMobileNo"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:maxLines="1"
                            android:maxLength="11"
                            android:inputType="number|none">

                        </com.google.android.material.textfield.TextInputEditText>
                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_weight="1.1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingHorizontal="30dp">

                <Button
                    android:id="@+id/btn_login"
                    style="@style/MaterialButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login_btnLogin" />

                <Button
                    android:id="@+id/btn_forgotPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:text="@string/login_btnRstPswrd"/>

                <Button
                    android:id="@+id/btn_createAccnt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:text="@string/login_btnCrtAccnt"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>