<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity_CreateAccount">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btn_signupBack"
            android:layout_width="?attr/actionBarSize"
            android:layout_height="match_parent"
            style="@style/Widget.AppCompat.Button.Borderless"
            app:srcCompat="@drawable/ic_signup_back"
            android:padding="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|start"
            android:text="Sign Up"
            android:textColor="@color/colorAccentLight"
            android:textSize="20sp"
            android:fontFamily="@font/roboto_medium"
            android:paddingLeft="15dp"/>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="10dp"
        android:paddingHorizontal="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginHorizontal="10dp"
                android:weightSum="2">

                <LinearLayout
                    android:layout_weight="1.3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="bottom|center_horizontal">


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_signupLastNm"
                        style="@style/textBoxAppearance"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/acct_lastName"
                        app:errorEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tie_signupLastNm"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:autoSizeTextType="uniform"
                            android:autoSizeMaxTextSize="18sp"
                            android:autoSizeMinTextSize="12sp"
                            android:inputType="textPersonName|textCapSentences"
                            android:fontFamily="@font/roboto_regular"
                            android:imeOptions="flagNoExtractUi"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_signupFirstNm"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/textBoxAppearance"
                        android:hint="@string/acct_firstName"
                        app:errorEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tie_signupFirstNm"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:autoSizeTextType="uniform"
                            android:autoSizeMaxTextSize="18sp"
                            android:autoSizeMinTextSize="12sp"
                            android:inputType="textPersonName|textCapSentences"
                            android:fontFamily="@font/roboto_regular"
                            android:imeOptions="flagNoExtractUi"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="2">

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/til_signupMidName"
                            android:layout_weight=".6"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/acct_middName"
                            style="@style/textBoxAppearance"
                            app:errorEnabled="true"
                            android:layout_marginRight="5dp">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/tie_signupMidname"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:autoSizeTextType="uniform"
                                android:autoSizeMaxTextSize="18sp"
                                android:autoSizeMinTextSize="12sp"
                                android:inputType="textPersonName|textCapSentences"
                                android:fontFamily="@font/roboto_regular"
                                android:imeOptions="flagNoExtractUi"/>
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/til_signupSuffix"
                            android:layout_weight="1.4"
                            style="@style/textBoxAppearance"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/acct_suffix"
                            app:errorEnabled="true">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/tie_signupSuffix"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:autoSizeTextType="uniform"
                                android:autoSizeMaxTextSize="18sp"
                                android:autoSizeMinTextSize="12sp"
                                android:inputType="textPersonName|textCapSentences"
                                android:fontFamily="@font/roboto_regular"
                                android:imeOptions="flagNoExtractUi"/>
                        </com.google.android.material.textfield.TextInputLayout>
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_weight=".7"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_signupEmail"
                        style="@style/textBoxAppearance"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/acct_Email"
                        app:errorEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tie_signupEmail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:autoSizeTextType="uniform"
                            android:autoSizeMaxTextSize="18sp"
                            android:autoSizeMinTextSize="12sp"
                            android:inputType="textEmailAddress"
                            android:fontFamily="@font/roboto_regular"
                            android:imeOptions="flagNoExtractUi"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_signupPassword"
                        style="@style/textBoxAppearance"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/acct_Password"
                        app:errorEnabled="true"
                        app:passwordToggleEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tie_signupPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:autoSizeMaxTextSize="18sp"
                            android:autoSizeMinTextSize="12sp"
                            android:autoSizeTextType="uniform"
                            android:fontFamily="@font/roboto_regular"
                            android:imeOptions="flagNoExtractUi"
                            android:inputType="textPassword" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_signupCfmPassword"
                        style="@style/textBoxAppearance"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/acct_ConfirmPswd"
                        app:errorEnabled="true"
                        app:passwordToggleEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tie_signupCfmPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:autoSizeTextType="uniform"
                            android:autoSizeMaxTextSize="18sp"
                            android:autoSizeMinTextSize="12sp"
                            android:inputType="textPassword"
                            android:fontFamily="@font/roboto_regular"
                            android:imeOptions="flagNoExtractUi"/>
                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_signupMobileNo"
                        style="@style/textBoxAppearance"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/acct_MobileNo"
                        app:errorEnabled="true"
                        app:counterMaxLength="11"
                        app:counterEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tie_signupMobileNo"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:autoSizeTextType="uniform"
                            android:autoSizeMaxTextSize="18sp"
                            android:autoSizeMinTextSize="12sp"
                            android:inputType="number|none"
                            android:fontFamily="@font/roboto_regular"
                            android:maxLength="11"
                            android:imeOptions="flagNoExtractUi"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/btn_signupSubmit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Send confirmation email"
                        android:textSize="16sp"
                        style="@style/MaterialButton"
                        android:layout_marginBottom="20dp"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>