<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity_RequestPassword">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_alignParentTop="true"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btn_prBack"
                android:layout_width="?attr/actionBarSize"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/ic_signup_back"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:padding="10dp"
                tools:ignore="VectorDrawableCompat" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical|start"
                android:text="Forgot Password"
                android:textColor="@color/colorAccentLight"
                android:textSize="20sp"
                android:fontFamily="@font/roboto_medium"
                android:paddingLeft="15dp"/>

        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:layout_centerHorizontal="true"
            android:layout_above="@id/input_layout"
            android:layout_marginBottom="20dp"
            app:srcCompat="@drawable/ic_mailer"/>

        <LinearLayout
            android:id="@+id/input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pswd_provideEmail"
                android:textSize="18sp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="15dp"/>
            <!--User Email Input Layout-->
            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="2"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginHorizontal="10dp">

                <ImageView
                    android:layout_weight="1.7"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    app:srcCompat="@drawable/ic_mail"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_prEmail"
                    android:layout_weight=".4"
                    style="@style/textBoxAppearance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_email"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tie_prEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:inputType="textEmailAddress"
                        android:fontFamily="@font/roboto_regular"
                        android:maxLines="1"/>
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>


        </LinearLayout>

        <Button
            android:id="@+id/btn_prSendEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/MaterialButton"
            android:text="@string/pswd_btnSendEmail"
            android:fontFamily="@font/roboto_regular"
            android:textSize="16sp"
            android:layout_below="@id/input_layout"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="20dp"/>
    </RelativeLayout>

</LinearLayout>